# event-driven-automation

./: .env.dev.example  .gitignore  LICENSE  README.md  install_dependencies.sh  pyproject.toml
containerlab/: lab-semanacap.yml
exercicio_fastapi/: .env.example  Dockerfile  compose.yaml  create_events_and_webhook_netbox.py  main.py  main_com_pydantic.py
exercicio_napalm/: get_facts_arista.py
exercicio_netbox/: .env.example  get_data_device_graphql.py  get_data_device_restapi.py  get_data_interface_restapi.py  populate_netbox.py
exercicio_netconf/: netconf_01_capabilities.py  netconf_02_runningconfig.py  netconf_03_filter.py  netconf_04_hostname.py
exercicio_netmiko/: send_command_arista.py  send_command_cisco.py
exercicio_nginx/: docker-compose.yml
exercicio_temporal/: .env  client.py  compose.yaml
exercicio_temporal/workers/: worker.py
exercicio_temporal/workflows/: workflow.py
fastapi/: Dockerfile  docker-compose.yml
napalm/: get_facts_arista.py  get_facts_cisco.py
netbox/: get_data_device_graphql.py  get_data_device_restapi.py  get_data_interface_restapi.py  get_data_restapi.py  import_data.py  populate_netbox.py
netmiko/: send_command_arista.py  send_command_cisco.py
nginx/: docker-compose.yml
nginx/conf.d/: default.conf
nornir/: nornir_arista.py  nornir_cisco.py
projeto_completo/: .env  .env.dev.example  Dockerfile  compose.yaml
projeto_completo/src/: main.py  utils.py
projeto_completo/src/activities/device/: arista_ceos.py
projeto_completo/src/activities/netbox/: graphql.py  restapi.py
projeto_completo/src/workers/: device.py  interface.py  worker.py
projeto_completo/src/workflows/: device.py  interface.py
temporal/: .env  client.py
temporal/activities/: operations.py
(+1 files in other folders)
